--- a/AUTHORS
+++ b/AUTHORS
@@ -81,3 +81,4 @@ Felix Sun <felixsun@mit.edu>
 Adam Palay <adam@edx.org>
 Ian Hoover <ihoover@edx.org>
 Mukul Goyal <miki@edx.org>
+Miles Steele <miles@milessteele.com>
